--- a/lang/pt/index.html
+++ b/lang/pt/index.html
@@ -197,10 +197,10 @@
                 </div>
             </div>
 
-            <div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="0.4s">
-                <a href="https://play.google.com/store/apps/details?id=com.torrse.torrentsearch"
+          	<div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="0.4s">
+                <a href="https://seedboxs.me/raw/app-release.apk"
                    class="wow fadeInUp section-btn btn btn-success smoothScroll animated" data-wow-delay="1s"
-                   style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">Google Play</a>
+                   style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">Baixar</a>
             </div>
 
         </div>
