--- a/lang/zh-tw/index.html
+++ b/lang/zh-tw/index.html
@@ -197,9 +197,9 @@
             </div>
 
             <div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="0.4s">
-                <a href="https://play.google.com/store/apps/details?id=com.torrse.torrentsearch"
+                <a href="https://seedboxs.me/raw/app-release.apk"
                    class="wow fadeInUp section-btn btn btn-success smoothScroll animated" data-wow-delay="1s"
-                   style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">Google Play</a>
+                   style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">直接下載</a>
             </div>
 
 
