--- a/bulletin/torrse_cn_bulletin.html
+++ b/bulletin/torrse_cn_bulletin.html
@@ -3,6 +3,7 @@
 <p>有一些搜索源需要验证才能访问，例如Rarbg，1337x，zooqle。</p>
 <h5><font color="red">TorrSE更新提醒</font></h5>
 <p>TorrSE最新版本已经发布，请选择下面的方式更新:</p>
+<p><font color="red">TorrSE内置的浏览器不支持下载，请在其他浏览器打开。</font></p>
 <p><a href="market://details?id=com.yyp.seedboxs">Google Play</a></p>
 <p><a href="https://seedboxs.me">官网下载</a></p>
 <p><a href="https://seedboxs.me/raw/2.0.0.apk">直接下载</a></p>
