--- a/bulletin/torrse_cn_bulletin.html
+++ b/bulletin/torrse_cn_bulletin.html
@@ -2,7 +2,7 @@
 <h5>关于网站验证</h5>
 <p>有一些搜索源需要验证才能访问，例如Rarbg，1337x，zooqle。</p>
 <h5><font color="red">2019最新磁力种子搜索网站</font></h5>
-<p><a href="https://www.jianshu.com/p/13ae6b541e79">热门磁力种子搜索网站介绍</a></p>
-<p><a href="https://www.jianshu.com/p/401904b5c7ef">热门磁力种子搜索网站表格</a></p>
-<p><a href="https://www.jianshu.com/p/db14409f01f1">TorrSE使用教程</a></p>
+<p><a href="https://blog.csdn.net/a742340082/article/details/95963545">热门磁力种子搜索网站介绍</a></p>
+<p><a href="https://blog.csdn.net/a742340082/article/details/95963251">热门磁力种子搜索网站表格</a></p>
+<p><a href="https://blog.csdn.net/a742340082/article/details/95962927">TorrSE使用教程</a></p>
 </html>
