--- a/lang/zh-tw/index.html
+++ b/lang/zh-tw/index.html
@@ -207,6 +207,12 @@
                    class="wow fadeInUp section-btn btn btn-success smoothScroll animated" data-wow-delay="1s"
                    style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">直接下載</a>
             </div>
+			     <div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="0.4s">
+                <a href="https://www.lanzous.com/b838521"
+                   class="wow fadeInUp section-btn btn btn-success smoothScroll animated" data-wow-delay="1s"
+                   style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">藍奏云</a>
+            </div>
+
 
 
 
