--- a/bulletin/torrse_cn_bulletin.html
+++ b/bulletin/torrse_cn_bulletin.html
@@ -1,8 +1,9 @@
 ﻿<!DOCTYPE html>
 <h5>关于网站验证</h5>
 <p>有一些搜索源需要验证才能访问，例如Rarbg，1337x，zooqle,BtKitty,BtDigg,TorrentKitty,Alicili。</p>
-<h5><font color="red">2019最新磁力种子搜索网站</font></h5>
-<p><a href="https://blog.csdn.net/a742340082/article/details/95962927">热门磁力种子搜索网站介绍</a></p>
-<p><a href="https://blog.csdn.net/a742340082/article/details/95963251">热门磁力种子搜索网站表格</a></p>
-<p><a href="https://blog.csdn.net/a742340082/article/details/95963545">TorrSE使用教程</a></p>
+<h5><font color="red">应用2.0.1更新提醒</font></h5>
+<p>请选择下面的方式更新:</p>
+<p><a href="https://www.lanzous.com/b838521">蓝奏云</a></p>
+<p><a href="https://seedboxs.me">官网</a></p>
+<p><a href="market://details?id=com.torrentsearch.magnetsearch">GooglePlay</a></p>
 </html>
