--- a/bulletin/torrse_tw_bulletin.html
+++ b/bulletin/torrse_tw_bulletin.html
@@ -1,8 +1,9 @@
 ﻿<!DOCTYPE html>
 <h5>關於網站驗證</h5>
 <p>有一些搜索源需要驗證才能訪問，例如Rarbg，1337x，zooqle,BtKitty,BtDigg,TorrentKitty,Alicili。</p>
-<h5><font color="red">2019最新磁力種子搜索網站</font></h5>
-<p><a href="https://blog.csdn.net/a742340082/article/details/95962927">熱門磁力種子搜索網站介紹</a></p>
-<p><a href="https://blog.csdn.net/a742340082/article/details/95963251">熱門磁力種子搜索網站表格</a></p>
-<p><a href="https://blog.csdn.net/a742340082/article/details/95963545">TorrSE使用教程</a></p>
+<h5><font color="red">應用2.0.1更新提醒</font></h5>
+<p>請選擇以下方式更新:</p>
+<p><a href="https://www.lanzous.com/b838521">藍奏云</a></p>
+<p><a href="https://seedboxs.me">官網</a></p>
+<p><a href="market://details?id=com.torrentsearch.magnetsearch">GooglePlay</a></p>
 </html>
