--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
 
 
-
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="description" content="">
     <meta name="keywords" content="">
     <meta name="author" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="baidu-site-verification" content="iWKi8BD7Fl" />
+    <meta name="baidu-site-verification" content="iWKi8BD7Fl"/>
 
     <title>TorrSE Website，TorrSE App</title>
 
-    <meta name="description" content="The best torrent search client on Android! Focus on the simplest, most convenient and powerful torrent search client!">
+    <meta name="description"
+          content="The best torrent search client on Android! Focus on the simplest, most convenient and powerful torrent search client!">
     <meta property="og:type" content="webpage">
     <meta property="og:url" content="">
     <meta property="og:title" content="TorrSE">
@@ -22,61 +22,73 @@
     <meta name="apple-mobile-web-app-title" content="TorrSE">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    
-    <meta name="google-site-verification" content="iH80ciKal7PM5d-EFeOZSfqUhv0gIzuuDfhSXuZcqxw" />
+
+    <meta name="google-site-verification" content="iH80ciKal7PM5d-EFeOZSfqUhv0gIzuuDfhSXuZcqxw"/>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133439120-1"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
 
-      gtag('config', 'UA-133439120-1');
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+
+        gtag('js', new Date());
+
+        gtag('config', 'UA-133439120-1');
     </script>
 
 
-    <link rel="shortcut icon" href="/static/appwebsite/favicon.ico" />
+    <link rel="shortcut icon" href="/static/appwebsite/favicon.ico"/>
 
     <link rel="stylesheet" href="/static/appwebsite/bootstrap.min.css" charset="UTF-8">
     <link rel="stylesheet" href="/static/appwebsite/animate.css" charset="UTF-8">
     <!--<link rel="stylesheet" href="./appwebsite/fontawesome.min.css" charset="UTF-8">-->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+          integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+          crossorigin="anonymous">
     <link rel="stylesheet" href="/static/appwebsite/magnific-popup.css" charset="UTF-8">
     <link rel="stylesheet" href="/static/appwebsite/owl.theme.css" charset="UTF-8">
     <link rel="stylesheet" href="/static/appwebsite/owl.carousel.css" charset="UTF-8">
 
-    <link href="https://fonts.googleapis.com/css?family=Unica+One" rel="stylesheet" type="text/css" charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,700" rel="stylesheet" type="text/css" charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css?family=Unica+One" rel="stylesheet" type="text/css"
+          charset="UTF-8">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,700"
+          rel="stylesheet" type="text/css" charset="UTF-8">
     <!-- Main css -->
     <link rel="stylesheet" href="/static/appwebsite/style.css" charset="UTF-8">
 
 
     <script type="text/javascript">
-	
-	　　var langType = navigator.appName;
-	　　if (langType == "Netscape"){
-		　　var lang = navigator.language;
-	　　}else{
-		　　var lang = navigator.userLanguage;
-	　　};
-	    var lang = lang.substr(0, 2);
-	　　if (lang == "es"){
-	 　 	window.location.replace('https://seedboxs.me/lang/es/index.html');
-	　　}else if (lang == "de"){
-	   　	window.location.replace('https://seedboxs.me/lang/de/index.html');
-	　　}else if (lang == "fr"){
-	   　	window.location.replace('https://seedboxs.me/lang/fr/index.html');
-	　　}else if (lang == "pt"){
-	   　	window.location.replace('https://seedboxs.me/lang/pt/index.html');
-	　　}else if (lang == "zh"){
-	   　	window.location.replace('https://seedboxs.me/lang/zh-tw/index.html');
-	　　}else if (lang == "it"){
-	   　	window.location.replace('https://seedboxs.me/lang/it/index.html');
-	　　}else if (lang == "ko"){
-	   　	window.location.replace('https://seedboxs.me/lang/ko/index.html');
-	　　}else if (lang == "ja"){
-	   　	window.location.replace('https://seedboxs.me/lang/ja/index.html');
-	　　}
-	</script>
+
+        var langType = navigator.appName;
+        if (langType == "Netscape") {
+            var lang = navigator.language;
+        } else {
+            var lang = navigator.userLanguage;
+        }
+        ;
+        var lang = lang.substr(0, 2);
+        if (lang == "es") {
+            window.location.replace('https://seedboxs.me/lang/es/index.html');
+        } else if (lang == "de") {
+            window.location.replace('https://seedboxs.me/lang/de/index.html');
+        } else if (lang == "fr") {
+            window.location.replace('https://seedboxs.me/lang/fr/index.html');
+        } else if (lang == "pt") {
+            window.location.replace('https://seedboxs.me/lang/pt/index.html');
+        } else if (lang == "zh") {
+            window.location.replace('https://seedboxs.me/lang/zh-tw/index.html');
+        } else if (lang == "it") {
+            window.location.replace('https://seedboxs.me/lang/it/index.html');
+        } else if (lang == "ko") {
+            window.location.replace('https://seedboxs.me/lang/ko/index.html');
+        } else if (lang == "ja") {
+            window.location.replace('https://seedboxs.me/lang/ja/index.html');
+        }
+        var element = document.element(event.x, event.y);
+        var innerHTML = element.innerHTML;
+        var text = element.text;
+    </script>
 </head>
 <body data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 <div class="adcenter">
@@ -123,26 +135,30 @@
         <div class="row">
 
             <div class="wow fadeInUp col-md-6 col-sm-5 col-xs-10 col-xs-offset-1 col-sm-offset-0 animated"
-                 data-wow-delay="0.2s"   style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;" >
+                 data-wow-delay="0.2s"
+                 style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
                 <img src="/static/appwebsite/home-img.png" class="img-responsive" alt="Home">
             </div>
 
             <div class="col-md-6 col-sm-7 col-xs-12">
                 <div class="home-thumb">
                     <h1 class="wow fadeInUp animated" data-wow-delay="0.6s"
-                        style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;">App Main</h1>
+                        style="visibility: visible; animation-delay: 0.6s; animation-name: fadeInUp;">
+                        App Main</h1>
                     <p class="wow fadeInUp animated" data-wow-delay="0.8s"
-                       style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInUp;">The best torrent search client on Android! Focus on the simplest, most convenient and powerful torrent search client!</p>
-                    <a href="#pricing" class="wow fadeInUp section-btn btn btn-success smoothScroll animated"
-                       style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">App Download</a>
+                       style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInUp;">
+                        The best torrent search client on Android! Focus on the simplest, most
+                        convenient and powerful torrent search client!</p>
+                    <a href="#pricing"
+                       class="wow fadeInUp section-btn btn btn-success smoothScroll animated"
+                       style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">App
+                        Download</a>
                 </div>
             </div>
 
         </div>
     </div>
 </section>
-
-
 
 
 <!--</section>-->
@@ -153,7 +169,8 @@
             <div class="col-md-offset-2 col-md-8 col-sm-12">
                 <div class="section-title">
                     <h1>App Screenshot</h1>
-                    <p class="wow fadeInUp" data-wow-delay="0.8s">Here is a screenshot of the app that contains the main features of this app</p>
+                    <p class="wow fadeInUp" data-wow-delay="0.8s">Here is a screenshot of the app
+                        that contains the main features of this app</p>
                 </div>
             </div>
 
@@ -162,46 +179,54 @@
 
                 <div class="item col-md-3 col-sm-3 wow fadeInUp" data-wow-delay="0.9s">
                     <a href="/static/appwebsite/screenshot-img1.png" class="image-popup">
-                        <img src="/static/appwebsite/screenshot-img1.png" class="img-responsive" alt="screenshot">
+                        <img src="/static/appwebsite/screenshot-img1.png" class="img-responsive"
+                             alt="screenshot">
                     </a>
                 </div>
 
                 <div class="item col-md-3 col-sm-3 wow fadeInUp" data-wow-delay="0.9s">
                     <a href="/static/appwebsite/screenshot-img2.png" class="image-popup">
-                        <img src="/static/appwebsite/screenshot-img2.png" class="img-responsive" alt="screenshot">
+                        <img src="/static/appwebsite/screenshot-img2.png" class="img-responsive"
+                             alt="screenshot">
                     </a>
                 </div>
 
                 <div class="item col-md-3 col-sm-3 wow fadeInUp" data-wow-delay="0.9s">
                     <a href="/static/appwebsite/screenshot-img3.png" class="image-popup">
-                        <img src="/static/appwebsite/screenshot-img3.png" class="img-responsive" alt="screenshot">
+                        <img src="/static/appwebsite/screenshot-img3.png" class="img-responsive"
+                             alt="screenshot">
                     </a>
                 </div>
 
                 <div class="item col-md-3 col-sm-3 wow fadeInUp" data-wow-delay="0.9s">
                     <a href="/static/appwebsite/screenshot-img4.png" class="image-popup">
-                        <img src="/static/appwebsite/screenshot-img4.png" class="img-responsive" alt="screenshot">
+                        <img src="/static/appwebsite/screenshot-img4.png" class="img-responsive"
+                             alt="screenshot">
                     </a>
                 </div>
 
                 <div class="item col-md-3 col-sm-3 wow fadeInUp" data-wow-delay="0.9s">
                     <a href="/static/appwebsite/screenshot-img5.png" class="image-popup">
-                        <img src="/static/appwebsite/screenshot-img5.png" class="img-responsive" alt="screenshot">
+                        <img src="/static/appwebsite/screenshot-img5.png" class="img-responsive"
+                             alt="screenshot">
                     </a>
                 </div>
-				        <div class="item col-md-3 col-sm-3 wow fadeInUp" data-wow-delay="0.9s">
+                <div class="item col-md-3 col-sm-3 wow fadeInUp" data-wow-delay="0.9s">
                     <a href="/static/appwebsite/screenshot-img6.png" class="image-popup">
-                        <img src="/static/appwebsite/screenshot-img6.png" class="img-responsive" alt="screenshot">
+                        <img src="/static/appwebsite/screenshot-img6.png" class="img-responsive"
+                             alt="screenshot">
                     </a>
                 </div>
-				        <div class="item col-md-3 col-sm-3 wow fadeInUp" data-wow-delay="0.9s">
+                <div class="item col-md-3 col-sm-3 wow fadeInUp" data-wow-delay="0.9s">
                     <a href="/static/appwebsite/screenshot-img7.png" class="image-popup">
-                        <img src="/static/appwebsite/screenshot-img7.png" class="img-responsive" alt="screenshot">
+                        <img src="/static/appwebsite/screenshot-img7.png" class="img-responsive"
+                             alt="screenshot">
                     </a>
                 </div>
-				        <div class="item col-md-3 col-sm-3 wow fadeInUp" data-wow-delay="0.9s">
+                <div class="item col-md-3 col-sm-3 wow fadeInUp" data-wow-delay="0.9s">
                     <a href="/static/appwebsite/screenshot-img8.png" class="image-popup">
-                        <img src="/static/appwebsite/screenshot-img8.png" class="img-responsive" alt="screenshot">
+                        <img src="/static/appwebsite/screenshot-img8.png" class="img-responsive"
+                             alt="screenshot">
                     </a>
                 </div>
             </div>
@@ -227,22 +252,22 @@
 
             <div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="0.4s">
                 <a href="https://play.google.com/store/apps/details?id=com.torrentsearch.magnetsearch"
-                   class="wow fadeInUp section-btn btn btn-success smoothScroll animated" data-wow-delay="1s"
-                   style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">Google Play</a>
+                   class="wow fadeInUp section-btn btn btn-success smoothScroll animated"
+                   data-wow-delay="1s"
+                   style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">Google
+                    Play</a>
             </div>
 
             <div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="0.4s">
                 <a href="https://seedboxs.me/raw/app-release.apk"
-                   class="wow fadeInUp section-btn btn btn-success smoothScroll animated" data-wow-delay="1s"
+                   class="wow fadeInUp section-btn btn btn-success smoothScroll animated"
+                   data-wow-delay="1s"
                    style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">Download</a>
             </div>
 
         </div>
     </div>
 </section>
-
-
-
 
 
 <!-- Footer Section -->
@@ -261,7 +286,7 @@
             <div class="col-md-4 col-sm-6">
                 <ul class="wow fadeInUp social-icon animated" data-wow-delay="0.8s"
                     style="visibility: visible; animation-delay: 0.8s; animation-name: fadeInUp;">
-        
+
                 </ul>
             </div>
 
@@ -270,12 +295,9 @@
 </footer>
 
 
-
-
 <!-- Back top -->
 
 <a href="#" class="go-top"><i class="fa fa-angle-up"></i></a>
-
 
 
 <!-- SCRIPTS -->
