--- a/lang/zh-cn/index.html
+++ b/lang/zh-cn/index.html
@@ -202,7 +202,7 @@
             </div>
 
 	    <div class="wow fadeInUp col-md-4 col-sm-4" data-wow-delay="0.4s">
-                <a href="https://www.lanzous.com/b838521"
+                <a href="https://www.lanzous.com/i5e9lwb"
                    class="wow fadeInUp section-btn btn btn-success smoothScroll animated" data-wow-delay="1s"
                    style="visibility: visible; animation-delay: 1s; animation-name: fadeInUp;">藍奏云</a>
             </div>
